[package]
edition = "2018"
name = "kyanite"
version = "0.2.0"
authors = ["AXAz0r <thealeksaradovic@gmail.com>"]
keywords = ["image", "scrapper", "gallery"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/lu-ci/kyanite"
description = "A modular, expandable, gallery collector."

[profile.release]
opt-level = 3
lto = true

[dependencies]
chrono = "0.4.10"
clap = "2.33.0"
fern = "0.5.9"
flate2 = "1.0.13"
md5 = "0.7.0"
log = "0.4.8"
reqwest = "0.9.24"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
serde-xml-rs = "0.3.1"
slug = "0.1.4"
