[package]
edition = "2018"
name = "kyanite"
version = "0.3.3"
authors = ["AXAz0r <thealeksaradovic@gmail.com>"]
keywords = ["image", "scrapper", "gallery"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/lu-ci/kyanite"
description = "A modular, expandable, gallery collector."

[profile.release]
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "2.33"
fern = "0.5"
flate2 = "1.0"
md5 = "0.7"
log = "0.4"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.3"
slug = "0.1"
