[package]
edition = "2018"
name = "kyanite"
version = "0.5.2"
authors = ["AXAz0r <thealeksaradovic@gmail.com>"]
keywords = ["image", "scrapper", "gallery"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/lu-ci/kyanite"
description = "A modular, expandable, gallery collector."

[profile.release]
opt-level = "z"
lto = true

[dependencies]
async-trait = "0.1.53"
anyhow = "1.0.57"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["cargo"] }
fern = {version = "0.6.1", features = ["colored"] }
flate2 = "1.0.23"
md5 = "0.7.0"
log = "0.4.17"
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde-xml-rs = "0.5.1"
slug = "0.1.4"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
